--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,17 @@
 $base-font-size: 16px;
+
+$screen-sm: 640px;
+$screen-md: 768px;
+$screen-lg: 1024px;
+$screen-xl: 1280px;
+$screen-2xl: 1536px;
+
+
+$color-primary: #363C40;
+$color-white: #FFFFFF;
+$color-divider: #979797;
+$color-background: #ECECEC;
+
+$box-shadow-basic: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+
+$divider-basic: 2px solid $color-divider;
