--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,3 +1,33 @@
 .footer {
-  
+  background-color: $color-primary;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 10rem;
+
+  .footer-social-link {
+    text-decoration: none;
+
+    .footer-social {
+      background: $color-white;
+      width: 2.5rem;
+      height: 2.5rem;
+      border-radius: 0.2rem;
+      margin: 0 0.2rem;
+    }
+
+    &:hover {
+      .footer-social {
+        background: $color-background;
+      }
+    }
+  }
+}
+
+@media (min-width: $screen-md) {
+  .footer {
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding: 2.5rem 2rem 0 0;
+  }
 }
