--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,3 +1,31 @@
 .container {
+  padding: 0 1rem;
+  max-width: 640px;
+  margin: 0 auto;
+}
 
+@media (min-width: $screen-md) {
+  .container {
+    max-width: 768px;
+    padding: 0 1.5rem;
+  }
+}
+
+@media (min-width: $screen-lg) {
+  .container {
+    max-width: 1024px;
+    padding: 0 2rem;
+  }
+}
+
+@media (min-width: $screen-xl) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: $screen-2xl) {
+  .container {
+    max-width: 1536px;
+  }
 }
