--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './detail-hero.scss';
 @import './detail.scss';
 @import './footer.scss';
 @import './layout.scss';
