--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 1rem;
+  padding: 0 $container-x-padding-sm;
   max-width: 640px;
   margin: 0 auto;
 }
@@ -7,14 +7,14 @@
 @media (min-width: $screen-md) {
   .container {
     max-width: 768px;
-    padding: 0 1.5rem;
+    padding: 0 $container-x-padding-md;
   }
 }
 
 @media (min-width: $screen-lg) {
   .container {
     max-width: 1024px;
-    padding: 0 2rem;
+    padding: 0 $container-x-padding-lg;
   }
 }
 
