--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,9 +9,16 @@ $screen-2xl: 1536px;
 
 $color-primary: #363C40;
 $color-white: #FFFFFF;
+$color-black: #000000;
 $color-divider: #979797;
 $color-background: #ECECEC;
 
 $box-shadow-basic: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
 
 $divider-basic: 2px solid $color-divider;
+
+$nav-height: 3.2rem;
+
+$container-x-padding-sm: 1rem;
+$container-x-padding-md: 1.5rem;
+$container-x-padding-lg: 2rem;
